--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,24 @@
                 </plugins>
             </build>
         </profile>
-    </profiles>
+        <profile>
+                <id>hw3 tests</id>
+                <properties/>
+                <build>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-surefire-plugin</artifactId>
+                            <version>${maven-surefire-plugin.version}</version>
+                            <configuration>
+                                <suiteXmlFiles>
+                                    <suiteXmlFile>src/test/resources/hw3Tests.xml</suiteXmlFile>
+                                </suiteXmlFiles>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </build>
+            </profile>
+        </profiles>
     
 </project>
