--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <slf4j-simple.version>1.7.30</slf4j-simple.version>
         <lombok.version>1.18.10</lombok.version>
         <aspectj.version>1.9.5</aspectj.version>
+        <webdrivermanager.version>4.1.0</webdrivermanager.version>
     </properties>
 
     <dependencies>
@@ -60,6 +61,11 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>${webdrivermanager.version}</version>
         </dependency>
     </dependencies>
 
